refactor: udistrital/sga_documentacion#117
refactor funciones mid, cambio a servicios
