# swagger/swagger.json
@@ -20,8 +20,8 @@
                 "tags": [
                     "noticia-mid"
                 ],
-                "description": "get Crear_noticia",
-                "operationId": "Crear_noticiaController.GetAll",
+                "description": "get Noticia",
+                "operationId": "NoticiaController.GetAllNoticias",
                 "parameters": [
                     {
                         "in": "query",
@@ -64,7 +64,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Crear_noticia"
+                            "$ref": "#/definitions/models.Noticia"
                         }
                     },
                     "403": {
@@ -76,16 +76,16 @@
                 "tags": [
                     "noticia-mid"
                 ],
-                "description": "create Crear_noticia",
-                "operationId": "Crear_noticiaController.Create",
+                "description": "create Noticia",
+                "operationId": "NoticiaController.PostNoticia",
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "body for Crear_noticia content",
+                        "description": "body for Noticia content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Crear_noticia"
+                            "$ref": "#/definitions/models.Noticia"
                         }
                     }
                 ],
@@ -93,31 +93,11 @@
                     "201": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Crear_noticia"
+                            "$ref": "#/definitions/models.Noticia"
                         }
                     },
                     "403": {
                         "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/noticia-mid/lista": {
-            "get": {
-                "tags": [
-                    "noticia-mid"
-                ],
-                "description": "get all Noticias with Etiquetas and Contenido",
-                "operationId": "Crear_noticiaController.GetAllLista",
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/interface{}"
-                        }
-                    },
-                    "403": {
-                        "description": ""
                     }
                 }
             }
@@ -127,8 +107,8 @@
                 "tags": [
                     "noticia-mid"
                 ],
-                "description": "get Crear_noticia by id",
-                "operationId": "Crear_noticiaController.GetOne",
+                "description": "get Noticia by id",
+                "operationId": "NoticiaController.GetOne",
                 "parameters": [
                     {
                         "in": "path",
@@ -142,7 +122,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Crear_noticia"
+                            "$ref": "#/definitions/models.Noticia"
                         }
                     },
                     "403": {
@@ -154,8 +134,8 @@
                 "tags": [
                     "noticia-mid"
                 ],
-                "description": "update the Crear_noticia",
-                "operationId": "Crear_noticiaController.Put",
+                "description": "update the Noticia",
+                "operationId": "NoticiaController.PutNoticia",
                 "parameters": [
                     {
                         "in": "path",
@@ -167,10 +147,10 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "body for Crear_noticia content",
+                        "description": "body for Noticia content",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Crear_noticia"
+                            "$ref": "#/definitions/models.Noticia"
                         }
                     }
                 ],
@@ -178,7 +158,7 @@
                     "200": {
                         "description": "",
                         "schema": {
-                            "$ref": "#/definitions/models.Crear_noticia"
+                            "$ref": "#/definitions/models.Noticia"
                         }
                     },
                     "403": {
@@ -190,8 +170,8 @@
                 "tags": [
                     "noticia-mid"
                 ],
-                "description": "delete the Crear_noticia",
-                "operationId": "Crear_noticiaController.Delete",
+                "description": "delete the Noticia",
+                "operationId": "NoticiaController.Delete",
                 "parameters": [
                     {
                         "in": "path",
@@ -213,19 +193,15 @@
         }
     },
     "definitions": {
-        "interface{}": {
-            "title": "interface{}",
-            "type": "object"
-        },
-        "models.Crear_noticia": {
-            "title": "Crear_noticia",
+        "models.Noticia": {
+            "title": "Noticia",
             "type": "object"
         }
     },
     "tags": [
         {
             "name": "noticia-mid",
-            "description": "Crear_noticiaController operations for Crear_noticia\n"
+            "description": "NoticiaController operations for Noticia\n"
         }
     ]
 }
